# conspire.rs

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Cargo.toml  PLAN.md  README.md  build.rs  foo.py  stiffness_permuted.csv
.github/: CONTRIBUTING.md
.github/workflows/: Pages.yml  Publish.yml  Test.yml
examples/: cut_bone.rs  cut_sphere.rs
src/: lib.rs  test.rs
src/constitutive/: mod.rs  test.rs
src/constitutive/cohesive/: mod.rs
src/constitutive/fluid/: mod.rs
src/constitutive/hybrid/: mod.rs  test.rs
src/constitutive/multiphysics/: mod.rs
src/constitutive/solid/: mod.rs
src/constitutive/thermal/: mod.rs
src/domain/: mod.rs
src/domain/fem/: mod.rs
src/domain/vem/: mod.rs
src/fem/: mod.rs
src/fem/block/: mod.rs  test.rs
src/geometry/: mod.rs
src/geometry/bbox/: mod.rs  test.rs
src/geometry/bvh/: mod.rs
src/geometry/grid/: mod.rs  test.rs
src/geometry/mesh/: mod.rs  test.rs
src/geometry/ntree/: mod.rs
src/geometry/segmentation/: mod.rs  test.rs
src/geometry/voxel/: mod.rs  test.rs
src/io/: mod.rs
src/io/deflate/: mod.rs  test.rs
src/io/netcdf/: mod.rs  test.rs
src/io/npy/: mod.rs  test.rs
src/io/vtk/: mod.rs  read.rs  test.rs  write.rs
src/io/zip/: mod.rs  test.rs
src/math/: mod.rs  style.rs  test.rs
src/math/assert/: mod.rs  test.rs
src/math/graph/: mod.rs
src/math/hash/: mod.rs  test.rs
src/math/integrate/: doc.rs  explicit_iv.md  implicit.md  mod.rs  test.rs
src/math/interpolate/: mod.rs  test.rs
src/math/matrix/: mod.rs
src/math/optimize/: mod.rs  test.rs
src/mechanics/: mod.rs  test.rs
src/physics/: mod.rs
tests/: bone_core_and_surface.rs  demonstration.csv  demonstration.py  demonstration.rs  f3d.rs  foo.rs  huge.rs  smooth.rs  temporary.rs
(+804 files in other folders)
