[package]
authors = ["Michael R. Buche <mrbuche@sandia.gov>"]
categories = ["mathematics", "science"]
description = "The Rust interface to conspire."
documentation = "https://docs.rs/crate/conspire"
edition = "2024"
homepage = "https://mrbuche.github.io/conspire"
keywords = ["conspire", "mrbuche"]
license = "GPL-3.0"
name = "conspire"
repository = "https://github.com/mrbuche/conspire.rs"
version = "0.5.13"

[features]
all = ['fem', 'vem']
constitutive = ['mechanics']
doc = []
domain = ['constitutive']
fem = ['domain']
math = []
mechanics = ['math']
vem = ['domain']

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[package.metadata.docs.rs]
features = ["fem"]
rustdoc-args = ["--html-in-header", ".github/katex.html"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
